fix: add z-index for modal addPhoto

--- a/features/accounts/edit/profile-form/profile-form.module.scss
+++ b/features/accounts/edit/profile-form/profile-form.module.scss
@@ -18,7 +18,7 @@
 }
 
 .select {
-  // z-index: 100;
+  z-index: 100;
   width: 50%;
 }
 
